[package]
name = "vote-dapp"
version = "0.1.0"
description = "A decentralized voting application on Solana blockchain"
edition = "2021"
license = "MIT"
authors = ["0xNaxzerrr"]

[lib]
crate-type = ["cdylib", "lib"]
name = "vote_dapp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

